--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta name="keywords" content="thu mua laptop cũ tphcm" />
 <title>Tìm hiểu về sàn thu mua máy tính & laptop cũ tại tp.HCM - Musk.vn </title>
 <meta name="description" content="Musk.vn là sàn giao dịch trung gian giúp bạn thanh lý máy tính & laptop cũ nhanh chóng tiện lợi và có mức giá tốt. Đây là sàn giao dịch uy tín chất lượng nhận được đánh giá rất cao từ cả hai phía người">
-<link rel="canonical" href="" />
+<link rel="canonical" href="https://thu-mua-laptop-cu-tphcm.netlify.app/" />
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="https://storage.googleapis.com/s3-urls/application.css">
